2024-01-15T16:21:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7531563999 # 26
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
* notice: last 14d: unq all: 174 316
* notice: prev accum: outdated-unq outdated-all / unq all: 2213 6108 / 2434 6426
* notice: next accum: outdated-unq outdated-all / unq all: 2213 6108 / 2435 6427
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-01-01 2024-01-15]

2024-01-15T08:22:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7526126227 # 25
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-15
* notice: last 14d: unq all: 174 316
* notice: prev accum: outdated-unq outdated-all / unq all: 2213 6108 / 2433 6425
* notice: next accum: outdated-unq outdated-all / unq all: 2213 6108 / 2434 6426
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-01 2024-01-15]

2024-01-14T16:19:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7520356530 # 23
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-14
* notice: last 14d: unq all: 174 317
* notice: prev accum: outdated-unq outdated-all / unq all: 2211 6105 / 2426 6416
* notice: next accum: outdated-unq outdated-all / unq all: 2213 6108 / 2433 6425
* notice: prev exec diff / last date diff / accum: unq all: +7 +9 -0 -0 / +7 +9 -0 -0 / 7 9
* notice: removed / changed dates: [2023-12-31] / [2024-01-14]

2024-01-14T01:18:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7516056878 # 21