@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-15T16:21:11Z",
-  "count_outdated" : 6108,
-  "uniques_outdated" : 2213,
+  "timestamp" : "2024-01-16T01:13:34Z",
+  "count_outdated" : 6121,
+  "uniques_outdated" : 2224,
   "count" : 6427,
   "uniques" : 2435,
   "clones" : [
-    {
-      "timestamp": "2024-01-01T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 10, 13 ],
-      "count_decinc": [ 3, 13 ],
-      "uniques": 9,
-      "uniques_minmax": [ 9, 11 ],
-      "uniques_decinc": [ 2, 11 ]
-    },
     {
       "timestamp": "2024-01-02T00:00:00Z",
       "count": 82,
